Minor mobile font size fix in Beyond the Classroom section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1036,6 +1036,10 @@ p:last-child {
     padding-top: 0;
   }
 
+  .beyond-classroom-text li {
+    font-size: 1rem;
+  }
+
   .team-grid {
     grid-template-columns: 1fr;
   }
